--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1021.8KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65038, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-480.2KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇭🇰 (已存活1天)香港-173.1KB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-358.3KB/s(Youtube:不良林), server: 36.134.154.119, port: 65072, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-315.0KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
   - {name: 🇨🇳 中国-282.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-223.7KB/s(Youtube:不良林), server: 111.45.22.136, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-423.8KB/s(Youtube:不良林), server: 36.134.154.119, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-328.5KB/s(Youtube:不良林), server: 111.45.22.136, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-286.2KB/s(Youtube:不良林), server: 120.233.29.189, port: 65071, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
+  - {name: 🇨🇳 中国-244.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-480.2KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-273.7KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65083, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-212.9KB/s(Youtube:不良林), server: v6.heduian.online, port: 30866, type: vmess, uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /oooo, ws-headers: {Host: v6.heduian.online}}
+  - {name: 🇨🇳 中国-447.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-236.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.86MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-221.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-333.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1021.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-480.2KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-173.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-480.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-212.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-221.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1021.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-480.2KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-173.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-480.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-212.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-221.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1021.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-480.2KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-173.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-480.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-212.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-221.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活1天)香港-173.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1021.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-480.2KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-173.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-480.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-212.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-221.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1021.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-480.2KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-173.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-480.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-212.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-221.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1021.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-480.2KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-173.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-480.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-212.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-221.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1021.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-480.2KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-173.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-480.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-212.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-221.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
