--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-471.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 4, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-489.0KB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65027, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.08MB/s(Youtube:不良林), server: 36.134.154.119, port: 65072, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
   - {name: 🇨🇳 中国-5.86MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-245.6KB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇳 中国-271.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-282.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇦 加拿大-461.8KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-1018.6KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-207.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-469.6KB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-276.4KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-715.8KB/s(Youtube:不良林), server: 36.134.154.119, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-1.29MB/s(Youtube:不良林), server: 36.134.154.119, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-601.4KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65036, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
+  - {name: 🇰🇷 韩国-213.3KB/s(Youtube:不良林), server: hk16.bp777.buzz, port: 21665, type: vmess, uuid: 0696dab7-da01-44d4-8a5d-135026053a14, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk16.bp777.buzz}}
+  - {name: 🇭🇰 香港-229.5KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.39MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-471.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-461.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1018.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-207.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-469.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-276.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-715.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-601.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-213.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-471.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-461.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1018.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-207.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-469.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-276.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-715.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-601.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-213.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-471.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-461.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1018.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-207.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-469.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-276.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-715.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-601.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-213.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-471.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-461.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1018.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-207.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-469.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-276.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-715.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-601.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-213.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-471.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-461.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1018.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-207.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-469.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-276.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-715.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-601.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-213.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-471.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-461.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1018.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-207.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-469.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-276.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-715.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-601.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-213.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-471.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-461.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1018.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-207.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-469.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-276.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-715.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-601.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-213.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
